K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: preeti
spec:
  type: ClusterIP
  selector:
    app: springboot-hello
  ports:
    - port: 8080
      targetPort: 8080
