K8s/springboot-service.yaml
# springboot-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: springboot-hello-service
#   namespace: preeti
# spec:
#   selector:
#     app: springboot-hello
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8080
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: springboot-hello-service
  namespace: preeti
spec:
  selector:
    app: springboot-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP   # Changed from LoadBalancer
